--- a/home/techguides/access-t24-ud-directories.html
+++ b/home/techguides/access-t24-ud-directories.html
@@ -101,7 +101,7 @@
 </ul>
 </li>
 </ul>
-<p><img src="images/env-new.png" alt="new environment"></p>
+<p><img src="./images/env-new.png" alt="new environment"></p>
 <h2 id="create-a-user-on-the-portal">Create a User on the Portal</h2>
 <p>This is required later when connecting to T24 through SFTP server connection, because it checks the authentication to the cloud environment with that specific user and the attached SSH key. </p>
 <p>To see all the steps regarding how to add a new user on the portal and to attach the SSH key, please see the following user guide about how to <a href="user-creation-in-paas.html"><strong>Create Users</strong></a>.</p>
@@ -114,7 +114,7 @@
 </ul>
 </li>
 </ul>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/access-ud-endpoint.png" alt="sftp fields"></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="./images/access-ud-endpoint.png" alt="sftp fields"></p>
 <ul>
 <li>Click <strong>Advanced</strong></li>
 <li>In the new screen, select <strong>SSH Authentication</strong> </li>
@@ -159,7 +159,7 @@
 <li>Go to your environment on the portal </li>
 <li>Click on MONITOR APPLICATION  </li>
 </ul>
-<p><img src="images/env_gotoapplication.png" alt="access ud directories schema"></p>
+<p><img src="./images/env_gotoapplication.png" alt="access ud directories schema"></p>
 <p><br></p>
 <ul>
 <li><p>Login with your credentials (these will be provided by Temenos)</p>
