--- a/home/techguides/environment-basic-operations.html
+++ b/home/techguides/environment-basic-operations.html
@@ -81,11 +81,19 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="environment-basic-operations">Environment Basic Operations</h1>
 
-<p>After creating an environment, there are several actions (operations) that can be done via the available buttons: start all environments, stop all environments, clone, edit, delete, start, stop, rebuild, export the database and deploy the repository and also using the endpoints related to T24, the database or to the repository.
-<br></p>
-<p><img src="images/buttons-all.png" alt="buttons"></p>
+<p>After creating an environment, there are several actions (operations) that can be done via the available buttons: </p>
+<ol>
+<li><p>Filter the Environment by typing in the keywords</p>
+</li>
+<li><p>Filter the environments&#39; list  by ticking the <strong>Extend</strong>, <strong>Manual factory</strong> or <strong>Automated Factory</strong>.</p>
+</li>
+<li><p><strong>Start All User Environments</strong>, <strong>Stop All User Environments</strong>, <strong>Refresh</strong>, Create <strong>New Environment</strong></p>
+</li>
+</ol>
+<p><img src="./images/buttons-all.png" alt=""></p>
 <p><br></p>
 <h2 id="environment-buttons">Environment buttons</h2>
+<p>The user can also <strong>clone</strong>, <strong>edit</strong>, <strong>delete</strong>, <strong>start</strong>, <strong>stop</strong>, <strong>rebuild</strong>, <strong>export the database</strong> and <strong>deploy the repository</strong> and use the endpoints related to T24, the database or to the repository:</p>
 <ul>
 <li><p><strong>Start All User Environments</strong> button - use this button to only start all user environments</p>
 <p><img src="images/start-all-user-env.png" alt="start"> </p>
@@ -105,29 +113,20 @@
 </ul>
 <p><br></p>
 <ul>
-<li><p><strong>Creating a new environment</strong> - displays the fields required to create an environment. here you can give a name and a description to your environment and choose a template</p>
+<li><p>Create a <strong>New Environment</strong> - displays the fields required to create an environment. here you can give a name and a description to your environment and choose a template</p>
 <p><img src="images/button-new-environment.png" alt="start"> </p>
 </li>
-</ul>
-<p><br></p>
+<li><p>the <strong>Actions</strong> button from the right-side of the screen is expandable and allows the user to:</p>
 <ul>
-<li><p><strong>Cloning</strong> an environment - creates an identical environment by copying the Environment and configuration repository</p>
-<p><img src="images/button-clone.png" alt="start"> </p>
+<li><p><strong>Edit the environment</strong>  - allows you to change the name and the description of an environment</p>
 </li>
-</ul>
-<p><br></p>
-<ul>
-<li><p><strong>Edit environment</strong> an environment - allows you to change the name and the description of an environment</p>
-<p><img src="images/edit-environment.png" alt=""> </p>
+<li><p><strong>Clone</strong> the environment - creates an identical environment by copying the Environment and configuration repository</p>
 </li>
-</ul>
-<p><br></p>
-<ul>
 <li><p><strong>Delete environment</strong> - removes all resources including VMs and configuration repository that are part of an Environment</p>
-<p><img src="images/delete-button.png" alt=""> </p>
 </li>
-<li><p><strong>Customize template</strong> - the operation triggered by the button will copy in the environment repository all the template files used to create the environment</p>
-<p><img src="images/customize-template.png" alt=""> </p>
+</ul>
+<p><img src="./images/actions-button.png" alt=""> 
+<br></p>
 </li>
 </ul>
 <h2 id="t24-release-section---available-actions">T24 Release section - available actions</h2>
@@ -197,6 +196,9 @@
 <h2 id="repository-section---available-actions">Repository section - available actions</h2>
 <h3 id="span-stylecolororangefont-weight1000buttonsspan"><span style="color:orange;font-weight:1000;"><strong>Buttons</strong></span></h3>
 <ul>
+<li><p><strong>Customize template</strong> - the operation triggered by the button will copy in the environment repository all the template files used to create the environment</p>
+<p><img src="images/customize-template.png" alt=""> </p>
+</li>
 <li><p><strong>Deploy</strong> button - used when deploying newly added plugins, endpoints, updates, web services, packages etc.</p>
 <p><img src="images/button-deploy.png" alt="deploy"></p>
 </li>
