--- a/home/techguides/export-import-database.html
+++ b/home/techguides/export-import-database.html
@@ -135,7 +135,7 @@
 <li><p>After clicking the export starts (the action takes around a few minutes based on the DB size). While exporting, the button is disabled, after the export is done, the button gets enabled back.</p>
 </li>
 </ul>
-<p><img src="images/db-exporting.png" alt=""> </p>
+<p><img src="./images/db-exporting.png" alt=""> </p>
 <div class="NOTE"><h5>Note</h5><p>Please note that the same steps showed in this demo can be followed to export an environment. Start exporting by using the <strong>Export</strong> button (check the available buttons under T24 Release).</p>
 </div>
 <ul>
@@ -181,7 +181,7 @@
 </ul>
 </li>
 </ul>
-<p><img src="images/db-copy-repo.png" alt=""> </p>
+<p><img src="./images/db-copy-repo.png" alt=""> </p>
 <ul>
 <li>Create a folder on your computer (you can place it anywhere on your local machine). In this example is named &#39;GitDemo&#39;<ul>
 <li>Click right inside the folder and choose <strong>Git Clone</strong> (this command belongs to TortoiseGit)</li>
@@ -220,7 +220,7 @@ In case you made changes to the db file, please make sure you archive it as a .z
 <ul>
 <li>Go back to the portal to the target environment and click the <strong>Deploy</strong> button under the Repository</li>
 </ul>
-<p><img src="images/db-deploy.png" alt="deployment"> </p>
+<p><img src="./images/db-deploy.png" alt="deployment"> </p>
 <ul>
 <li>After the deployment is done, you can check the change of the database as follows:<ul>
 <li>Click Go to Application to open a T24 Browser</li>
