--- a/home/techguides/manage-environments.html
+++ b/home/techguides/manage-environments.html
@@ -108,7 +108,7 @@
 <li>Click <strong>Create environment</strong>
 All fields are mandatory except &#39;Labels&#39;</li>
 </ul>
-<p><img src="images/env-new.png" alt=""></p>
+<p><img src="./images/env-new.png" alt=""></p>
 <p><br></p>
 <p> To see the details of an environment you need to select it from the environments list. This window allows you to also filter the Extend environments or those resulted following a manual/ automated factory:
 <img src="images/env-list.png" alt=""></p>
@@ -118,19 +118,28 @@ All fields are mandatory except &#39;Labels&#39;</li>
 <li><strong>Templates</strong></li>
 </ul>
 <p>Check the list with all available templates. Click the <strong>Templates Catalog</strong> on the left menu.</p>
-<p><img src="images/env-template.png" alt=""></p>
-<p>Click on the Template Type and select for one of the applications, for example T24 to see the templates that are available for your organisation. The templates details is split into three tabs that provide:</p>
-<ul>
-<li><p>the release notes</p>
-<p><img src="images/template-releasenotes.png" alt=""> </p>
+<p><img src="./images/template-details.png" alt=""></p>
+<ol>
+<li><p>Click on the <strong>Template Type</strong> and select for one of the applications, for example T24 to see the templates that are available for your organisation. </p>
 </li>
-<li><p>a comprehensive list of components</p>
-<p><img src="images/template-componentslist.png" alt=""> </p>
+<li><p>If you are looking for a specific template, type in the <strong>Filter</strong> field the keywords </p>
 </li>
-<li><p>the template content </p>
-<p><img src="images/template-content.png" alt=""> </p>
+<li><p>Hover over the <strong>Name</strong> field to list all the available templates alphabetically</p>
 </li>
-</ul>
+<li><p>Select the number of <strong>items per page</strong> you want to display</p>
+</li>
+<li><p>Click on a template - on the right you will see the name of the template, its version, installation and expiration dates as well as:</p>
+</li>
+<li><p>The <strong>Release Notes</strong></p>
+</li>
+<li><p>The <strong>Components List</strong> - these can be filtered as the user wants</p>
+</li>
+</ol>
+<p><img src="./images/template-components-list.png" alt=""></p>
+<ol>
+<li>The <strong>Template Content</strong></li>
+</ol>
+<p><img src="./images/templates-content.png" alt=""></p>
 <h1 id="user-roles-required">User Roles Required#</h1>
 <p>To be able to create an environment the below permissions need to be enabled for your user:</p>
 <ul>
