--- a/home/techguides/manage-test-scripts.html
+++ b/home/techguides/manage-test-scripts.html
@@ -101,7 +101,7 @@
 </br></p>
 </li>
 <li><p>Create a new <strong>Component</strong> (eg. TestCase01) in the portal. The <strong>Component Type</strong> will be ‘TestScript’ </p>
-<p><img src="images/factory-migration-5.png" alt="factory-migration-5">
+<p><img src="./images/factory-migration-5.png" alt="factory-migration-5">
 <br>
 </br></p>
 </li>
@@ -110,7 +110,7 @@
 <br>
 </br></p>
 </li>
-<li><p>Select the previously created <strong>Component</strong> and <strong>Stage</strong> the in the** Test Configuration** of the factory </p>
+<li><p>Select the previously created <strong>Component</strong> and <strong>Stage</strong> the in the <strong>Test Configuration</strong> of the factory </p>
 <p><img src="images/factory-migration-7.png" alt="factory-migration-7"></p>
 </li>
 </ol>
