--- a/home/techguides/manage-workflows.html
+++ b/home/techguides/manage-workflows.html
@@ -113,23 +113,23 @@
 </br></p>
 <h1 id="create-workflow">Create workflow</h1>
 <p>To create your own workflow in the Temenos Continuous Deployment Platform you need to follow the below steps:</p>
-<ul>
-<li><p>select the <strong>Workflow</strong> tab from the left menu and click on <strong>New Workflow</strong>:</p>
-<p><img src="images/workflow-tab.png" alt=""> </p>
+<ol>
+<li><p>Select the <strong>Workflow</strong> tab from the left menu</p>
 </li>
-<li><p>a new window opens. Add a <strong>name</strong> and a <strong>description</strong> to the workflow:</p>
-<p><img src="images/workflow-create-wf.png" alt=""> </p>
+<li><p>Click on <strong>New Workflow</strong> from top-right</p>
 </li>
-<li><p>to define the workflow, simply drag and drop the shapes onto the canvas and connect them with arrows:</p>
-<p><img src="images/define-workflow.png" alt=""> </p>
+<li><p>A new window opens. Add a <strong>name</strong> and a <strong>description</strong> to the workflow</p>
 </li>
-<li><p>to connect the elements click on Add Edge; to delete any edge or element, select the item first then click on Delete Selected:</p>
-<p><img src="images/add-edge.png" alt=""></p>
+<li><p>To define the workflow, simply drag and drop the shapes onto the canvas and connect them with arrows</p>
+<p><img src="./images/workflow-tab.png" alt=""> </p>
 </li>
-<li><p>when the elements have been placed and connected accordingly, click Save Workflow. Based on the above diagram, a particular workflow will be sent to workflow service to proceed with the steps defined by the user</p>
+<li><p>To connect the elements click on Add Edge; to delete any edge or element, select the item first then click on Delete Selected</p>
 </li>
-<li>after the workflow is created, the user can add this workflow to any factory within his organisation (learn here how to set up factories)</li>
-</ul>
+<li><p>When the elements have been placed and connected accordingly, click Save Workflow. Based on the above diagram, a particular workflow will be sent to workflow service to proceed with the steps defined by the user</p>
+<p><img src="./images/add-edge.png" alt=""></p>
+</li>
+</ol>
+<p>After the workflow is created, the user can add this workflow to any factory within his organisation (learn <a href="http://documentation.temenos.cloud/home/techguides/automated-factories.html">here</a> how to set up factories)</p>
 <h1 id="edit-and-delete-a-workflow">Edit and delete a workflow</h1>
 <p>Users can edit and delete workflows only if these are not assigned to a factory.</p>
 <ul>
