--- a/home/techguides/release-info-2020-internal.html
+++ b/home/techguides/release-info-2020-internal.html
@@ -84,7 +84,7 @@
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release.</p>
 <h1 id="202007"><strong>202007</strong></h1>
 <p><strong>InfraBuild</strong>: 28  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202007.RC9
-&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 209 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202007** |<strong>&nbsp; **WorkflowServiceTag</strong>: 202007.RC8 </p>
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 209 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202007 |&nbsp; <strong>WorkflowServiceTag</strong>: 202007.RC8 </p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Automate enablement of HTTPS for external access to Gitlab environment repos</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Gitlab will be now accessible through HTTPS as well (on top of SSH) for external accesses. 
@@ -102,8 +102,8 @@
 <br>
 </br> </p>
 <h1 id="2020061"><strong>202006.1</strong></h1>
-<p><strong>InfraBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: TBA
-&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: TBA &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TBA</p>
+<p><strong>InfraBuild</strong>: 28  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202006.1.RC2
+&nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: 1876 &nbsp;<strong>|</strong>&nbsp;<strong>ControllerBuild</strong>: 187 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202006.1 &nbsp;<strong>|</strong>&nbsp; <strong>WorkflowServiceTar</strong>: 202006.1.RC2</p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Environment enhancements</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- for security reasons, all application environments now communicate with the Temenos Continuous Deployment infrastructure VMs only through private IPs 
