--- a/home/techguides/stream.html
+++ b/home/techguides/stream.html
@@ -107,46 +107,54 @@ The parts of the stream are listed below:</p>
 </ol>
 <h1 id="how-to-set-up-edit-delete-streams">How to Set-up/ Edit/ Delete Streams</h1>
 <h2 id="set-up-create-a-stream">Set-up/ Create a Stream</h2>
-<ul>
-<li>Login to the Temenos Continuous Deployment Platform</li>
-<li>Click on Settings button on the left menu &gt; this will expand a menu containing buttons for: Streams, Stages, Products, Factory and General.  </li>
-<li>Click on Stream button and then on the <strong>New Stream</strong> on the top right</li>
-<li>Fill the name <em>(mandatory field)</em>. Take into account these conditions (also notified on the screen): Name can start only with a letter or an underscore and it can contain only letters, digits, underscores or hyphens.</li>
-<li>Fill the description <em>(mandatory field)</em>.</li>
-<li>Click <strong>Create</strong>. </li>
-</ul>
-<p><strong>Note</strong>: <em>Instead of choosing the enable option, you can create a disabled stream and enable it later, but the default option should be enable.</em></p>
+<ol>
+<li><p>Click on <strong>Settings</strong> button on the left menu &gt; this will expand a menu containing buttons for: <strong>Streams</strong>, Stages, Products, Automated Factories, Workflows, Users, General, Release Notes</p>
+</li>
+<li><p>Click on <strong>Stream</strong> button and then on the <strong>New Stream</strong> on the top right</p>
+</li>
+<li><p>Fill the name and description <em>(mandatory fields)</em>. Take into account these conditions (also notified on the screen): name can start only with a letter or an underscore and it can contain only letters, digits, underscores or hyphens.</p>
+</li>
+<li><p>Click <strong>Create</strong></p>
+</li>
+</ol>
 <p><img src="./images/streams-create.png" alt=""></p>
-<p>After the successful creation, your stream will appear on the screen <em>(in case you already have other streams, the newly created will be the last in chronological order)</em> and it will automatically have associated the default stage named &#39;stable_dev&#39; (as in current example). Please <strong>note</strong> that the default stage name is defined in the metadata settings of your organization (On the main menu &gt; General).</p>
+<ol>
+<li><p>After the successful creation, your stream will appear on the screen <em>(in case you already have other streams, the newly created will be the last in chronological order)</em> and it will automatically have associated the default stage named &#39;Primary_stage&#39; (as in the current example). Please note that the default stage name is defined in the metadata settings of your organization (On the main menu &gt; General).</p>
+</li>
+<li><p>You can list the associated stages by typing in the <strong>Filter</strong> field keywords related to the respective stage. </p>
+</li>
+<li><p>You can choose which details of the stream you need to be displayed click on the <strong>Columns</strong> field and select from the drop-down the information you need to see.</p>
+</li>
+</ol>
 <p><img src="./images/streams-created.png" alt=""></p>
 <h2 id="edit-a-stream">Edit a Stream</h2>
-<p>You can edit anytime the name, the description of the stage or choose the disable option by clicking the edit button. </p>
-<p><img src="images/streams_edited.png" alt=""></p>
+<p>You can edit anytime the name, the description of the stage or choose the enable/ disable option. Click on <strong>Update Stream</strong> and the changes will be visible instantly.</p>
+<p><img src="./images/streams_edited.png" alt=""></p>
 <h2 id="clone-a-stream">Clone a Stream</h2>
 <p>You can clone a stream as well. This action will copy the latest version of all components in the default stage to the new stream. When cloning the stream, you can add a stream name, stream description and enable/disable it.</p>
-<p><img src="images/streams-cloned.png" alt=""> </p>
+<p><img src="./images/streams-cloned.png" alt=""> </p>
 <h2 id="delete-a-stream">Delete a Stream</h2>
 <div class="NOTE"><h5>Note</h5><p><span style="color:red">In order to delete a stream, you need to delete first all the subsequent features created. See example and explanations below.</span></p>
 </div>
 <p>Example 1: </p>
 <ul>
-<li>Suppose we have created a stream named <strong>demostream</strong> that has just the <strong>default stage</strong> and without adding other stages or configuring further components and products.</li>
-<li>We can just go and delete this stream (even if it has the **Primary Stage **associated to it).</li>
+<li>Suppose we have created a stream named <strong>demostream</strong> that has just the <strong>Primary_stage</strong> and without adding other stages or configuring further components and products.</li>
+<li>We can just go and delete this stream (even if it has the <strong>Primary Stage</strong>associated to it).</li>
 </ul>
 <p>Example 2:</p>
 <ul>
-<li>Suppose we have created a stream named <strong>demostream</strong> that has the default stage (Primary Stage) and also a stage named Stable_Dev, without configuring further components and products.</li>
+<li>Suppose we have created a stream named <strong>demostream</strong> that has the default stage (Primary Stage) and also a stage named Secondary_stage, without configuring further components and products.</li>
 <li>In order to be able to delete a stream that has <strong>more than the Primary Stage</strong>, we need first to go and delete the stages attached to it.</li>
-<li>Go first to Stages button on the left menu &gt; Select first your stream (top right) &gt; Select the stage that you want to delete (others then the Primary Stage - <em>because this stage cannot be deleted</em>) &gt; And click the delete button.</li>
+<li>Go first to Stages button on the left menu &gt; Select first your stream (top right) &gt; Select the stage that you want to delete (others then the Primary Stage - <em>because this stage cannot be deleted</em>) &gt; And click the <strong>delete</strong> button.</li>
 </ul>
-<p><img src="./images/streams-delete-stage.png" alt=""></p>
+<p><img src="./images/streams-delete-stage.png" alt=""> </p>
 <ul>
 <li>Go back to Streams and you will notice that your stream has only the Primary Stage associated, therefore you are able to delete the stream. Click the Delete button.</li>
 </ul>
-<p><img src="images/streams-delete-streams.png" alt=""></p>
+<p><img src="./images/streams-delete-streams.png" alt=""></p>
 <p>If you have added other stages and also components and products, first delete all the products, then the components, then the associated stages and finally you will be able to delete the stream. In case you skip one of these features deletion, the system will notify that is not possible to delete the respective stage.</p>
 <p> To see the details of a stream please select it from the streams&#39; list:
- <img src="images/streams-see-details.png" alt=""></p>
+ <img src="./images/streams-see-details.png" alt=""></p>
 <h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
 <ul>
